# HappyBaby

./: .gitignore  CMakeLists.txt  README.md
config/: VersionInfo.rc.in
source/: main.cpp
source/Core/: HBCoreCfg.cpp  HBCoreCfg.h  HBCoreGame.cpp  HBCoreGame.h  HBCoreHeader.h
source/Main/: HBMainWidget.cpp  HBMainWidget.h  HBMainWidget.ui
